--- a/src/app/ControlGroup/controlGroup.html
+++ b/src/app/ControlGroup/controlGroup.html
@@ -77,12 +77,12 @@
                                             <!--<th class="">Active</th>
                                             <th class="">Deleted</th>-->
                                             <th class="text-right">Measurement Start Date</th>
-                                            <th class="text-right">Measurement End Date</th>
-                                            <th class="text-right">Measurement End Date 1</th>
-                                            <th class="text-right">Measurement End Date 2</th>
-                                            <!--<th class="text-right"  style="display:none">Measurement End Date3</th>
-                                            <th class="text-right"  style="display:none">Measurement End Date4</th>
-                                            <th class="text-right">Modified By</th>
+                                            <th class="text-right">End Date</th>
+                                            <th class="text-right">End Date 1</th>
+                                            <th class="text-right">End Date 2</th>
+                                            <th class="text-right">End Date 3</th>
+                                            <th class="text-right">End Date 4</th> 
+                                            <!-- <th class="text-right">Modified By</th>
                                             <th class="text-right">Modified Date</th>
                                             <th class="text-right">Created By</th>
                                             <th class="text-right">Created Date</th>
@@ -110,9 +110,9 @@
                                             <td class="text-right">{{row?.measurementEndDate}}</td>
                                             <td class="text-right">{{row?.measurementEndDate1}}</td>
                                             <td class="text-right">{{row?.measurementEndDate2}}</td>
-                                            <!--<td class="text-right" style="display:none">{{row?.measurementEndDate3}}</td>
-                                            <td class="text-right" style="display:none">{{row?.measurementEndDate4}}</td>
-                                            <td class="">{{row?.modifiedBy}}</td>
+                                            <td class="text-right">{{row?.measurementEndDate3}}</td>
+                                            <td class="text-right">{{row?.measurementEndDate4}}</td>
+                                            <!--<td class="">{{row?.modifiedBy}}</td>
                                             <td class="">{{row?.modifiedDate}}</td>
                                             <td class="">{{row?.controlGroupId}}</td>
                                             <td class="">{{row?.createdBy}}</td>
