--- a/src/app/ongoingreport/ogreport.html
+++ b/src/app/ongoingreport/ogreport.html
@@ -81,7 +81,7 @@
                                             <div class="col-sm-7">
                                                 <label class="field select">
                                                 <select id="selTypeofHours" name="typeofHours" formControlName="typeOfHour">
-                                                    <option selected disabled value="">All</option>
+                                                    <option selected value="">All</option>
                                                     <option *ngFor="let hour of typeOfHours" value={{hour}}>
                                                         {{hour}}
                                                     </option>
