--- a/src/app/nhftreport/nhftreport.html
+++ b/src/app/nhftreport/nhftreport.html
@@ -10,8 +10,8 @@
                     <div class="panel-heading">
                         <span class="panel-title">New Hire Full Time Report</span>
                         <span class="panel-icon pull-right">
-                           <a id="btnDownloadPdf"  class="fa fa-file-pdf-o" (click)="downloadPdf()"></a>
-                            <a id="btnDownloadExcel" class="fa fa-file-excel-o" (click)="downloadExcel()" ></a>
+                          <a id="btnDownloadPdf" title="Download PDF" class="fa fa-file-pdf-o" (click)="downloadPdf()"></a>
+                          <a id="btnDownloadExcel" data-toggle="modal" data-target="#confirm-excel-download" data-dismiss="modal" title="Download Excel" class="fa fa-file-excel-o"></a>
                         </span>
                     </div>
                     <div class="panel-body">
@@ -52,7 +52,7 @@
                                 <div class="col-sm-4">
                                     <div class="form-group">
                                         <label for="ddlcontrolgroup" class="col-sm-5 control-label"><i class="fa fa-group"></i> Control Group</label>
-                                        <div class="col-sm-7">
+                                        <!-- <div class="col-sm-7">
                                             <label class="field select">
                                                 <select id="ddlcontrolgroup" name="ddlcontrolgroup" [(ngModel)]="selectedControlGroup">
                                                     <option value="-1">All</option>
@@ -62,12 +62,14 @@
                                                 </select>
                                                 <i class="arrow"></i>
                                             </label>
-                                        </div>
-                                        
+                                        </div> -->
+                                        <div class="col-sm-7">
+                                        <div class="block">
+                                            <ss-multiselect-dropdown [options]="myOptions" [settings]="mySettings" [texts]="myTexts" [(ngModel)]="selectedControlGroup"></ss-multiselect-dropdown>
+                                        </div> 
+                                        </div>                                       
                                     </div>
-
-                                </div>  
-                                                     
+                                </div>                                                       
                             </div>
                              <div class="row" style="margin-left: 120px">
                                    <div class="col-sm-1">
@@ -145,4 +147,23 @@
         </div>
     </section>
     <!-- -------------- /Content -------------- -->
+
+    <!-- excel download -->
+    <div class="modal fade" id="confirm-excel-download" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Excel Download</h4>
+                </div>
+                <div class="modal-body">
+                    <h4 class="text-center">Download is Dangerous!</h4>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-bordered btn-primary mb5" data-dismiss="modal" (click)="downloadExcel()">Ok</button>
+                     <button type="reset" class="btn btn-bordered mb5" data-dismiss="modal"> Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
