--- a/src/app/PayrollDataActivityreport/payrollDataActivityReport.html
+++ b/src/app/PayrollDataActivityreport/payrollDataActivityReport.html
@@ -10,8 +10,8 @@
                     <div class="panel-heading">
                         <span class="panel-title">Payroll Data Activity Report</span>
                         <span class="panel-icon pull-right">
-                            <a id="btnDownloadPdf"  class="fa fa-file-pdf-o" (click)="downloadPdf()"></a>
-                            <a id="btnDownloadExcel" class="fa fa-file-excel-o" (click)="downloadExcel()" ></a>
+                          <a id="btnDownloadPdf" title="Download PDF" class="fa fa-file-pdf-o" (click)="downloadPdf()"></a>
+                          <a id="btnDownloadExcel" data-toggle="modal" data-target="#confirm-excel-download" data-dismiss="modal" title="Download Excel" class="fa fa-file-excel-o"></a>
                         </span>
                     </div>
                     <div class="panel-body">
@@ -113,4 +113,22 @@
         </div>
     </section>
     <!-- -------------- /Content -------------- -->
+    <!-- excel download -->
+    <div class="modal fade" id="confirm-excel-download" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Information</h4>
+                </div>
+                <div class="modal-body">
+                    <h4 class="text-center">Download is Dangerous!</h4>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-bordered btn-primary mb5" data-dismiss="modal" (click)="downloadExcel()">Ok</button>
+                     <button type="reset" class="btn btn-bordered mb5" data-dismiss="modal"> Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
