--- a/src/app/PayrollDataActivityreport/payrollDataActivityReport.html
+++ b/src/app/PayrollDataActivityreport/payrollDataActivityReport.html
@@ -119,7 +119,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Information</h4>
+                    <h4 class="modal-title" id="myModalLabel">Excel Download</h4>
                 </div>
                 <div class="modal-body">
                     <h4 class="text-center">Download is Dangerous!</h4>
