added the add client onboarding

--- a/src/app/EmployeeEligibilityReport/employeeEligibilityReport.html
+++ b/src/app/EmployeeEligibilityReport/employeeEligibilityReport.html
@@ -10,8 +10,8 @@
                     <div class="panel-heading">
                         <span class="panel-title">Employee Eligibility Report</span>
                         <span class="panel-icon pull-right">
-                           <a id="btnDownloadPdf"  class="fa fa-file-pdf-o" (click)="downloadPdf()"></a>
-                            <a id="btnDownloadExcel" class="fa fa-file-excel-o" (click)="downloadExcel()" ></a>
+                           <a id="btnDownloadPdf"  class="fa fa-file-pdf-o fa-2x" style="width: 45px; height: 45px" (click)="downloadPdf()"></a>
+                            <a id="btnDownloadExcel" class="fa fa-file-excel-o fa-2x" style="width: 45px; height: 45px" (click)="downloadExcel()" ></a>
                         </span>
                     </div>
                     <div class="panel-body">
@@ -63,13 +63,13 @@
 
                                     <div class="form-group">
                                         <div class="col-sm-4">
-                                   
+
                                     <button class="btn btn-primary" type="button" (click)="Search()">Filter</button>
                                 </div>
                                 <div class="col-sm-3">
                                     <button class="btn btn-primary" type="button" (click)="reset()">Reset</button>
                                 </div>
-                                    
+
                                     </div>
                                 </div>
                             </div>
@@ -112,7 +112,7 @@
                                     </div>
                                 </div>
 
-                               
+
                             </div>
                         </div>
                     </div>
